# dot-notes

./: .dockerignore  .gitignore  Dockerfile  Makefile  package-lock.json
backend/: Cargo.toml  Cross.toml  Makefile
backend/dev-utils/: watch-everything.sh
backend/migrations/2020-10-27-102128_add_dates/: up.sql
backend/migrations/2021-06-26-055111_add_schedules/: down.sql  up.sql
backend/src/: main.rs
backend/src/api/: mod.rs  statics.rs
backend/src/db/: mod.rs  models.rs  schema.rs
backend/src/routes/: mod.rs
backend/src/routes/api/: mod.rs  models.rs
backend/src/routes/statics/: mod.rs  statics_dev.rs  statics_standalone.rs
backend/src/schedule/: mod.rs
dev-utils/: watch-everything.sh
frontend/: jest.config.js  package-lock.json  package.json  webpack.config.js
frontend/src/: config-page.tsx  main_page.tsx  note_editor_page.tsx  note_schedule_page.tsx
frontend/src/api/: client.tsx
frontend/src/components/: editable_list_item.tsx  note_link.tsx  schedule_note_create_form.tsx  scheduled_grid.tsx  search_field.tsx
frontend/src/pages/: config-page.tsx  create-schedule-page.tsx  main-page.tsx  main_layout.tsx  note_entry.tsx
frontend/src/styles/: dark.less
frontend/src/utils/: nested_list.test.tsx
notes-frontend/: babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
notes-frontend/coverage/: clover.xml  coverage-final.json  lcov.info
notes-frontend/src/: component.ts  index.tsx  note_editor_page.tsx  note_schedule_page.tsx
notes_backend/: Cargo.toml  Makefile
notes_backend/src/: main.rs  schema.rs
(+34 files in other folders)
