[package]
name = "dotnotes-backend"
version = "0.1.0"
authors = ["sinkingpoint <colin@quirl.co.nz>"]
edition = "2018"

[features]
default = ["dotnotes_standalone"]

# When set (the default), builds a production ready binary
# That is statically linked to sqlite, and has the frontend artifacts
# bundled inside
dotnotes_standalone = ["libsqlite3-sys/bundled"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", features = [ "default", "compression" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
diesel = { version = "1.4.5" , features = ["sqlite", "r2d2"]}
rand = "0.7.3"
diesel_migrations = "1.4.0"
chrono = "0.4"
env_logger = "0.8.1"
regex = "1"
libsqlite3-sys = { version = "*" }
futures = "0.3.7"
cron = "0.9.0"
atty = "0.2"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-json = "2.3.0"